# crew-demo

./: .gitignore  README.md  requirements.txt
ideal_finder/: README.md  pyproject.toml
ideal_finder/src/ideal_finder/: crew.py  main.py
ideal_finder/src/ideal_finder/tools/: google_search_tool.py
notes/: 01_ollama.ipynb  02_ollama_chinese.ipynb  03_ollama_agents.ipynb  04_ollama_game_builder.ipynb
src/: 01_ollama.py  02_ollama_chinese.py  03_ollama_agents.py  04_ollama_game_builder.py  search_demo.py
src/custom_tools/: tavily_ai_tool.py
