[tool.poetry]
name = "ideal_finder"
version = "0.1.0"
description = "ideal-finder using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}

[tool.poetry.scripts]
ideal_finder = "ideal_finder.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"